--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,5 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #F2F5F7;
 }
